css: avoid word wrap within nav links
This will have zero unforeseen consequences.

--- a/src/static/css/site.css
+++ b/src/static/css/site.css
@@ -804,6 +804,10 @@ a:not([href]):hover {
   color: white;
 }
 
+.nav-link {
+  display: inline-block;
+}
+
 .nav-link a.series {
   font-style: oblique;
 }
